# Fcitx5-Enhancer

./: .gitignore  README.md  build.gradle  gradle.properties
src/main/resources/: fcitx5-enhancer.mixins.json
src/native/: CMakeLists.txt  main.cpp
